# shuttle

./: README.md  ir.hipoo.Shuttle.json  meson.build
data/: ir.hipoo.Shuttle.desktop.in  ir.hipoo.Shuttle.gschema.xml  ir.hipoo.Shuttle.metainfo.xml.in  ir.hipoo.Shuttle.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: ir.hipoo.Shuttle.data.gresource.xml  ir.hipoo.Shuttle.src.gresource.xml  main.js  meson.build  shortcuts-dialog.blp  shortcuts-dialog.ui  singbox.js  window.blp  window.js  window.ui
